<resources>
    <string name="app_name">To-Do</string>
    <string name="welcome">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="TandC">I agree to the terms and condition of the AppCompany</string>
    <string name="error_view">Error View</string>
    <string name="password">Password</string>
    <string name="email_hint">user@domain.com</string>
    <string name="email">Email</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_verify_again">Send Verify Email Again</string>
    <string name="enterEmailId">Enter the registered Email ID</string>
    <string name="reset_password">Reset Password</string>
    <string name="user_domain_com">user@domain.com</string>
    <string name="title_activity_to_do_list_home">ToDoListHomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="action_settings">Settings</string>
    <string name="today_s_tasks">Today`s Tasks :)</string>
</resources>